// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/presenters/PanelPresenter renders with all props 1`] = `
.emotion-0 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

<div
  className="emotion-0"
  onScroll={[Function]}
>
  Hello World
</div>
`;

exports[`flyout/presenters/PanelPresenter renders without props 1`] = `
.emotion-0 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

<div
  className="emotion-0"
  onScroll={undefined}
/>
`;
